# galvanic-mock

./: Cargo.toml  Readme.md
src/: acquire.rs  data.rs  expect.rs  generate_mocks.rs  given.rs  lib.rs  mock_definition.rs  new_mock.rs  util.rs
src/generate/: behaviour.rs  binding_implementer.rs  mock_struct_implementer.rs  mod.rs  trait_implementer.rs  type_param_mapper.rs
tests/: expect_different_interactions.rs  expect_interactions.rs  expect_method_without_args.rs  expect_void_method.rs  galvanic_assert_integration.rs  given_block_missing_for_method.rs  given_different_repeats.rs  given_different_returns.rs  given_method_with_multiple_args.rs  given_method_with_single_arg.rs  given_method_without_args.rs  given_void_method_without_args.rs  method_multiple_args_given.rs  method_void_no_args_given.rs  mock_empty_trait.rs  mock_generic_trait.rs  mock_generic_trait_method.rs  mock_referred_trait.rs  mock_trait_and_apply_attributes.rs  mock_trait_in_submodules.rs  mock_with_explicit_type_name.rs  return_givens.rs  use_mocks_on_module.rs  verify_on_drop.rs
