[package]
name = "galvanic-mock"
version = "0.1.0"
authors = ["Christopher Bacher <mindsbackyard@gmail.com>"]

[dependencies]
synom = "0.11"
quote = "0.3"
lazy_static = "0.2"

[dependencies.syn]
version = "0.11"
features = ["full", "parsing"]

[dev-dependencies]
galvanic-assert = "0.8"

[lib]
proc-macro = true

[badges]
